FIx for bug 28349, don't addref a null pointer oh dude!. R=alecf, A=phil