mailnews/mime/src/nsStreamConverter.cpp
@@ -672,8 +672,12 @@ NS_IMETHODIMP
 nsStreamConverter::GetIdentity(nsIMsgIdentity * *aIdentity)
 {
   if (!aIdentity) return NS_ERROR_NULL_POINTER;
+  /*
+	We don't have an identity for the local folders account,
+    we will return null but it is not an error!
+  */
   	*aIdentity = mIdentity;
-  	NS_ADDREF(*aIdentity);
+  	NS_IF_ADDREF(*aIdentity);
   return NS_OK;
 }
 
